--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -14,6 +14,24 @@
     letter-spacing: 8px
     color: $chickadee-white
 
+  #bird-search
+    position: absolute
+    top: 0
+    right: 0
+    text-align: right
+
+    a
+      margin: none
+      font-size: 16px
+
+  #privileged-links
+    position: absolute
+    top: 0
+    left: 0
+
+    a
+      margin-right: 10px
+
   #menu
     position: relative
     top: -12px
@@ -26,11 +44,3 @@
 
       &:hover, &.active
         color: lighten($peach-orange, 5%)
-
-  #upper-right-links
-    position: absolute
-    top: 0
-    right: 0
-
-    a
-      margin-left: 10px
