--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -33,7 +33,7 @@
         <ul>
         {% for bird in program.species.all %}
           <li>
-            <a href="{% url 'bird_url' id=bird.id%}">{{ bird }}</a>
+            <a href="{% url 'bird_url' id=bird.id%}">{{ bird.common_name }}</a>
           </li>
         {% endfor %}
         </ul>
