--- a/creations/templates/research.html
+++ b/creations/templates/research.html
@@ -52,7 +52,7 @@
   <ul>
   {% for bird in research_item.species.all %}
     <li>
-      <a href="{% url 'bird_url' id=bird.id%}">{{ bird }}</a>
+      <a href="{% url 'bird_url' id=bird.id%}">{{ bird.common_name }}</a>
     </li>
   {% endfor %}
   </ul>
