Lotsa page organization

--- a/creations/static/stylesheets/writing.sass
+++ b/creations/static/stylesheets/writing.sass
@@ -1,5 +1,5 @@
-#books
-  #all-books
+#writing
+  #books
     width: 105%
     padding: 0 2.5%
     position: relative
@@ -48,3 +48,8 @@
     @media (max-width: 500px)
       .book
         width: 95%
+
+
+#article
+  div
+    padding-bottom: $vertical-whitespace
