--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -21,5 +21,22 @@ html, body
   margin-top: 20px
   margin-bottom: 10px
 
-h2
+#page-title
+  float: left
+  width: 100%
   margin-bottom: $vertical-whitespace
+
+.page-subtitle
+  float: left
+  clear: both
+  width: 100%
+  margin-bottom: $vertical-whitespace / 2
+
+.page-section
+  float: left
+  clear: both
+  width: 100%
+  margin-bottom: $vertical-whitespace * 2
+
+  &:last-child
+    margin-bottom: 0
