--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,4 +4,7 @@
 
 {% block content %}
   Welcome to Laura's new web page!
+  <br>
+  <a href="http://flickr.com/lauraerickson">
+    Laura's Photos on Flickr</a>
 {% endblock %}
