--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -13,9 +13,7 @@ body
   font-family: $base-font-family
   font-size: $base-font-size
   color: $chickadee-black
-
-#content
-  line-height: 125%
+  line-height: 1.5
 
 h1, h2, h3, h4
   margin: 0
@@ -25,20 +23,21 @@ h1, h2, h3, h4
 h1
   font-family: 'adelaidaregular', sans-serif
 
-h2
+h2, h3
   font-family: 'Dosis', sans-serif
   font-weight: 500
-  font-size: 30px
   letter-spacing: 1px
   color: $chickadee-dark-gray
 
+h2
+  font-size: 30px
+
 h3
-  font-family: 'Dosis', sans-serif
+  font-size: 26px
+
+h4
   font-variant: small-caps
-  font-weight: 600
-  font-size: 24px
-  letter-spacing: 2px
-  color: $chickadee-gray
+  font-size: 22px
 
 a
   text-decoration: none
