--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,7 +5,7 @@
   <body id="{% block body_id %}{% endblock %}">
     {% include "header.html" %}
     <div id="content">
-      <h2>{% block page_title %}{% endblock%}</h2>
+      <h2 id="page-title">{% block page_title %}{% endblock%}</h2>
       {% block content %}{% endblock %}
     </div>
     {% include "footer.html" %}
