--- a/birds/static/stylesheets/bird.sass
+++ b/birds/static/stylesheets/bird.sass
@@ -7,8 +7,8 @@
   .card
     float: left
     padding: 10px
-    margin-right: 20px
-    margin-bottom: 20px
+    margin-right: $whitespace / 2
+    margin-bottom: $whitespace / 2
     max-width: 500px
 
     h3
