--- a/creations/static/stylesheets/research.sass
+++ b/creations/static/stylesheets/research.sass
@@ -1,7 +1,7 @@
 #research
   #content
     div
-      padding-bottom: $vertical-whitespace
+      padding-bottom: $whitespace
 
 #research-categories
   #content
