--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -12,7 +12,7 @@ $peach-orange: #deb888
 $base-font-size: 17px
 $base-font-family: Georgia, serif
 
-$vertical-whitespace: 36px
+$whitespace: 36px
 
 @import reset
 @import font
