--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -4,16 +4,16 @@
     width: 100%
     text-align: center
     font-size: 30px
-    margin-bottom: $vertical-whitespace / 2
+    margin-bottom: $whitespace / 2
 
   .program
     float: left
-    margin-bottom: $vertical-whitespace
+    margin-bottom: $whitespace
 
     div
       float: left
       width: 100%
-      margin-bottom: $vertical-whitespace / 4
+      margin-bottom: $whitespace / 4
 
       &#species-tags, &#other-tags
         width: auto
