--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -23,7 +23,7 @@ h1, h2, h3, h4
 h1
   font-family: 'adelaidaregular', sans-serif
 
-h2, h3
+h2, h3, h4
   font-family: 'Dosis', sans-serif
   font-weight: 500
   letter-spacing: 1px
@@ -31,12 +31,13 @@ h2, h3
 
 h2
   font-size: 30px
+  margin-top: -10px
 
 h3
   font-size: 26px
+  margin-top: -10px
 
 h4
-  font-variant: small-caps
   font-size: 22px
 
 a
