--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -4,7 +4,7 @@ html, body
   background: $chickadee-dark-gray
 
 #header, #content, #footer
-  margin: 0 50px
+  margin: 0 $whitespace * 1.5
 
 #header
   position: relative
@@ -12,7 +12,7 @@ html, body
 #content
   min-height: 500px
   background: $chickadee-cream
-  padding: 30px
+  padding: $whitespace * 1.5
   border-radius: 2px
   overflow: hidden
   height: auto
@@ -24,19 +24,19 @@ html, body
 #page-title
   float: left
   width: 100%
-  margin-bottom: $vertical-whitespace
+  margin-bottom: $whitespace
 
 .page-subtitle
   float: left
   clear: both
   width: 100%
-  margin-bottom: $vertical-whitespace / 2
+  margin-bottom: $whitespace / 2
 
 .page-section
   float: left
   clear: both
   width: 100%
-  margin-bottom: $vertical-whitespace * 2
+  margin-bottom: $whitespace * 2
 
   &:last-child
     margin-bottom: 0
