--- a/website/static/stylesheets/footer.sass
+++ b/website/static/stylesheets/footer.sass
@@ -1,6 +1,13 @@
 #footer
-  font-size: 12px
+  color: $chickadee-cream
+  font-size: 16px
+  letter-spacing: 1px
+  font-family: $header-font-family
 
-  #copyright
-    width: 50%
+  #content-copyright
+    max-width: 60%
     float: left
+
+  #website-copyright
+    max-width: 35%
+    float: right
