--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -1,3 +1,21 @@
+// Fonts
+@font-face
+  font-family: 'adelaidaregular'
+  src: url('../fonts/adelaida/adelaida-regular-webfont.eot')
+  src: url('../fonts/adelaida/adelaida-regular-webfont.eot?#iefix') format('embedded-opentype')
+  src: url('../fonts/adelaida/adelaida-regular-webfont.woff') format('woff')
+  src: url('../fonts/adelaida/adelaida-regular-webfont.ttf') format('truetype')
+  font-weight: normal
+  font-style: normal
+
+@import url(http://fonts.googleapis.com/css?family=Dosis:200,500,600)
+
+$base-font-size: 17px
+$base-font-family: Georgia, serif
+$header-font-family: 'Dosis', sans-serif
+
+
+// Colors
 $chickadee-cream: #f5f4ee
 $chickadee-white: #deedf2
 $chickadee-light-gray: #cfd3cf
@@ -9,11 +27,13 @@ $moss: #788c6d
 $moss-dark: #63664e
 $peach-pink: #de8d88
 $peach-orange: #deb888
-$base-font-size: 17px
-$base-font-family: Georgia, serif
 
+
+// Spacing
 $whitespace: 36px
 
+
+// Import other stylesheets
 @import reset
 @import font
 @import elements
