--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,19 +1,8 @@
 <div id="footer">
-  <div id="copyright">
-    <!--
+  <div id="content-copyright">
     All writing, images, videos, and sound recordings are
     copyrighted 1997-{% now "Y" %} by Laura L. Erickson.
-    <br>
-    Website built by
-    <a href="http://katherineerickson.com/">Katherine Erickson</a>,
-    code on <a href="https://github.com/katur/forthebirds">Github</a>.
-    -->
-
     <!--
-    All my writing, images, videos, and sound recordings are copyrighted
-    1997-{% now "Y" %} by Laura L. Erickson.
-    <br>
-    <br>
     I love to share my work to promote bird conservation and education,
     and to help people enjoy and learn about the birds and other creatures
     who live with us on this little planet.
@@ -26,5 +15,11 @@
     You can ask for permission by
     <a href="mailto:chickadee@lauraerickson.com">emailing me</a>.
     -->
+  </div>
+
+  <div id="website-copyright">
+    Website built by
+    <a href="http://katherineerickson.com/">Katherine Erickson</a>,
+    code on <a href="https://github.com/katur/forthebirds">Github</a>.
   </div>
 </div>
