--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -1,14 +1,3 @@
-@font-face
-  font-family: 'adelaidaregular'
-  src: url('../fonts/adelaida/adelaida-regular-webfont.eot')
-  src: url('../fonts/adelaida/adelaida-regular-webfont.eot?#iefix') format('embedded-opentype')
-  src: url('../fonts/adelaida/adelaida-regular-webfont.woff') format('woff')
-  src: url('../fonts/adelaida/adelaida-regular-webfont.ttf') format('truetype')
-  font-weight: normal
-  font-style: normal
-
-@import url(http://fonts.googleapis.com/css?family=Dosis:200,500,600)
-
 body
   font-family: $base-font-family
   font-size: $base-font-size
@@ -24,7 +13,7 @@ h1
   font-family: 'adelaidaregular', sans-serif
 
 h2, h3, h4
-  font-family: 'Dosis', sans-serif
+  font-family: $header-font-family
   font-weight: 500
   letter-spacing: 1px
   color: $chickadee-dark-gray
