A couple minor fixes

--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -19,7 +19,7 @@
     font-size: $base-font-size + 3
 
   p
-    margin-bottom: 20px
+    margin-bottom: $whitespace / 2
 
     &:last-child
       margin-bottom: none
