--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,6 +3,7 @@
   {% include "head.html" %}
 
   <body id="{% block body_id %}{% endblock %}">
+    {% include "admin_bar.html" %}
     {% include "header.html" %}
     <div id="content">
       <h2 id="page-title">{% block page_title %}{% endblock%}</h2>
