cleanup of the last commit: move next param to the right link, remove unnecesary styles, add letter spacing

--- a/website/static/stylesheets/admin_bar.sass
+++ b/website/static/stylesheets/admin_bar.sass
@@ -2,16 +2,15 @@ $admin-height: 28px
 $admin-padding: 10px
 
 #admin-bar
-  @include box-sizing(border-box)
   width: 100%
   height: $admin-height
-  margin: 0
   background: $chickadee-black
 
   font-family: $header-font-family
   color: $chickadee-light-gray
   font-size: $base-font-size - 3
   line-height: $admin-height
+  letter-spacing: 0.6px
   text-align: left
 
   span,
@@ -20,9 +19,7 @@ $admin-padding: 10px
     text-transform: lowercase
 
   .user
-    margin:
-      left: $admin-padding
-      right: $admin-padding
+    margin: 0  $admin-padding
 
   a
     padding: 0 $admin-padding
