minor style changes

--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -1,8 +1,9 @@
 #header
   color: $chickadee-white
-  font-family: 'Dosis', sans-serif
+  font-family: $header-font-family
   font-size: 20px
   font-weight: 200
+  letter-spacing: 1px
   text-align: center
   height: 130px
 
@@ -36,7 +37,6 @@
     position: relative
     top: -12px
     font-size: 22px
-    letter-spacing: 1px
     height: 28px
     a
       padding: 0 20px
