--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -5,7 +5,7 @@ html, body
 
 #header, #content, #footer
   @include clearfix
-  margin: 0 $whitespace * 1.5
+  margin: 0 3%
 
 #header
   position: relative
@@ -20,11 +20,6 @@ html, body
 
 #footer
   margin-top: $whitespace
-  margin-bottom: $whitespace
-
-#page-title
-  float: left
-  width: 100%
   margin-bottom: $whitespace
 
 .page-subtitle
