Add back the page title styles

--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -5,7 +5,7 @@ $max-header-breakpoint: 1430px
   color: $chickadee-white
   font-family: $header-font-family
 
-  #page-title
+  #site-title
     display: inline-block
     position: relative
     overflow: hidden
