--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -6,7 +6,7 @@
 {% url 'miscellany_url' as miscellany_url %}
 
 <div id="header">
-  <a id="page-title" href="{{ home_url }}">
+  <a id="site-title" href="{{ home_url }}">
     <h1>Laura Erickson's For the Birds</h1>
   </a>
 
