--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -22,16 +22,18 @@ html, body
   margin-top: $whitespace
   margin-bottom: $whitespace
 
-.page-subtitle
+#page-title, .page-subtitle, .page-section
   float: left
   clear: both
   width: 100%
+
+#page-title
+  margin-bottom: $whitespace
+
+.page-subtitle
   margin-bottom: $whitespace / 2
 
 .page-section
-  float: left
-  clear: both
-  width: 100%
   margin-bottom: $whitespace * 2
 
   &:last-child
