minor style and copy changes

--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -1,9 +1,12 @@
 $max-header-breakpoint: 1430px
 
 #header
+  padding-top: 5px
   text-align: center
   color: $chickadee-white
   font-family: $header-font-family
+  font-weight: 200
+  letter-spacing: 1px
 
   #site-title
     display: inline-block
@@ -29,11 +32,10 @@ $max-header-breakpoint: 1430px
         font-size: 144px
 
   #menu
-    width: 100%
     float: left
     clear: both
-    font-weight: 200
-    letter-spacing: 1px
+    width: 100%
+    margin: $whitespace / 4 0
     font-size: 22px
 
     a
