move About Laura to home; more header style work

--- a/creations/templates/miscellany.html
+++ b/creations/templates/miscellany.html
@@ -6,5 +6,7 @@
 {% block page_title %}Miscellany{% endblock %}
 
 {% block content %}
+<a href="http://flickr.com/lauraerickson">
+  Laura's Photos on Flickr</a>
 <a href="http://conservationbigyear.com">Conservation Big Year: 2013</a>
 {% endblock %}
