--- a/website/static/stylesheets/home.sass
+++ b/website/static/stylesheets/home.sass
@@ -1,3 +1,13 @@
 #home
-  h2
+  #page-title
     display: none
+
+  #primary-photo
+    float: left
+    width: 40%
+
+  #blurb
+    float: right
+    width: 50%
+    margin-left: 5%
+    margin-right: 5%
