--- a/creations/templates/miscellany.html
+++ b/creations/templates/miscellany.html
@@ -6,7 +6,13 @@
 {% block page_title %}Miscellany{% endblock %}
 
 {% block content %}
-<a href="http://flickr.com/lauraerickson">
-  Laura's Photos on Flickr</a>
-<a href="http://conservationbigyear.com">Conservation Big Year: 2013</a>
+<ul>
+  <li><a href="http://flickr.com/lauraerickson">
+    Laura's Photos on Flickr</a>
+  </li>
+
+  <li>
+    <a href="http://conservationbigyear.com">Conservation Big Year: 2013</a>
+  </li>
+</ul>
 {% endblock %}
