--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -8,6 +8,8 @@
     type="text/javascript"></script>
   <script src="{{ STATIC_URL }}js/birds.js"
     type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}js/creations.js"
+    type="text/javascript"></script>
 
   <title>Laura Erickson's For the Birds</title>
 </head>
