--- a/creations/templates/writing.html
+++ b/creations/templates/writing.html
@@ -8,6 +8,11 @@
 {% block content %}
 
 <div class="page-section">
+  <h3>Blog</h3>
+  <a href="http://lauraerickson.blogspot.com">Laura's Birding Blog</a>
+</div>
+
+<div class="page-section">
   <h3 class="page-subtitle">Books</h3>
   <div id="books">
     {% for book in books %}
@@ -72,7 +77,7 @@
     <li>
       <a href="{% url 'article_url' id=article.id %}">
         {{ article.title }}</a>
-    </li>
+title    </li>
   {% endfor %}
   </ul>
 </div>
