--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -43,6 +43,7 @@ $whitespace: 36px
 @import header
 @import footer
 @import home
+@import about
 @import ../../../birds/static/stylesheets/bird
 @import ../../../birds/static/stylesheets/birds
 @import ../../../birds/static/stylesheets/birds_taxonomical
