add slideshow. style changes.

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -22,10 +22,10 @@
         background: lighten($moss-light, 18)
 
       a
-        color: darken($peach-pink, 10)
+        color: $dark-link-color
 
         &:hover, &.active
-          color: darken($peach-orange, 10)
+          color: $dark-link-color-active
 
       .program-info
         display: none
