--- a/website/static/stylesheets/footer.sass
+++ b/website/static/stylesheets/footer.sass
@@ -11,3 +11,9 @@
   #website-copyright
     max-width: 35%
     float: right
+
+  a
+    color: $light-link-color
+
+    &:hover, &.active
+      color: $light-link-color-active
