--- a/website/static/stylesheets/home.sass
+++ b/website/static/stylesheets/home.sass
@@ -1,3 +1,20 @@
 #home
   #page-title
     display: none
+
+  #content
+    #slideshow-wrapper
+      margin: auto
+      text-align: center
+
+      @media (min-width: 872px)
+        width: 800px
+
+      span
+        font-style: italic
+        font-size: 36px
+        font-family: 'Dosis'
+        color: $chickadee-gray
+
+      div
+        margin-top: $whitespace
