--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -29,6 +29,15 @@ $peach-pink: #de8d88
 $peach-orange: #deb888
 
 
+// Links
+$link-color: darken($peach-pink, 5%)
+$link-color-active: darken($peach-orange, 5%)
+$light-link-color: lighten($peach-pink, 7%)
+$light-link-color-active: lighten($peach-orange, 7%)
+$dark-link-color: darken($peach-pink, 10%)
+$dark-link-color-active: darken($peach-orange, 10%)
+
+
 // Spacing
 $whitespace: 36px
 
