--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -31,7 +31,7 @@ h4
 
 a
   text-decoration: none
-  color: $peach-pink
+  color: $link-color
 
   &:hover, &.active
-    color: $peach-orange
+    color: $link-color-active
